@@ -3,7 +3,6 @@ package com.smartcodeltd.jenkinsci.plugins.build_monitor.tasks;
 import static net.serenitybdd.screenplay.Tasks.instrumented;
 
 import com.smartcodeltd.jenkinsci.plugins.build_monitor.tasks.configuration.SaveTheChangesToBuildMonitor;
-import java.util.Arrays;
 import java.util.List;
 import net.serenitybdd.screenplay.Actor;
 import net.serenitybdd.screenplay.Performable;
@@ -14,7 +13,7 @@ import net.thucydides.core.annotations.Step;
 public class ConfigureEmptyBuildMonitorView implements Task {
 
     public static ConfigureEmptyBuildMonitorView to(Task... configurationTasks) {
-        return instrumented(ConfigureEmptyBuildMonitorView.class, Arrays.asList(configurationTasks));
+        return instrumented(ConfigureEmptyBuildMonitorView.class, List.of(configurationTasks));
     }
 
     @Override
