@@ -5,7 +5,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import net.serenitybdd.integration.jenkins.JenkinsInstance;
@@ -23,7 +22,7 @@ public class InstallPluginsFromDisk implements ApplicativeTestRule<JenkinsInstan
 
     public InstallPluginsFromDisk(Path... pluginsToInstall) {
         this.pluginIDs = List.of();
-        this.pluginsToInstall = Arrays.asList(pluginsToInstall);
+        this.pluginsToInstall = List.of(pluginsToInstall);
     }
 
     @Override
